fixed an issue with the 'X' for removing categories in multiple-select that caused it to wrap in Webkit browsers
git-svn-id: http://svn.apostrophenow.org/plugins/apostrophePlugin/trunk@1317 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/web/css/a.css
+++ b/web/css/a.css
@@ -433,7 +433,17 @@ color: #900;
 	margin-left: 2px;
 }
 
+a.a-multiple-select-remove
+{
+position: relative;	
+}
 
+a.a-multiple-select-remove span
+{
+position: absolute;
+top: 0;
+left: 100%;
+}
 
 
 
